2000-05-01  John Jannotti  <jj@lcs.mit.edu>

	* toc.el (toc-permit-mode): Added (keeps track of server side mode)
	(toc-permit-list): Added (keeps track of server side list)
	(toc-add-permit): Keep track of server info
	(toc-add-deny): Keep track of server info
	(toc-permit-all): Smarter if already in the right mode
	(toc-deny-all): Smarter if already in the right mode
	(toc-permit-only): Smarter if already correct
	(toc-deny-only): Smarter is already correct
	(toc-open): Reset the permit-mode and permit-list

2000-04-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el: fixed bug introduced on 2000-04-21.  was checking
	(member 'tnt-other-name-face (face-list)), should be checking
	(not (member ...)).  

2000-04-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (cl): now doing (require 'cl).  maybe later we'll
	implement those few functions we're using...

	* Makefile (RELEASE): Changelog changed to ChangeLog
	(release): now specifying filename in cmd line to tar rather than
	redirecting into file

	* tnt.el (tnt-version): updated version to 2.2

2000-04-21  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el: Use a slightly silly way to check if a face is already
	defined.  Emacs uses internal-find-face, XEmacs uses find-face, so 
	we just call member on (face-list) which both support.

2000-04-18  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-completing-read-list): added &optional
	initial-input, which gets passed through to completing-read.
	(tnt-expand-groups-for-chat-invitation): needed to make it apply
	'append, rather than simply append, since what we have is a list
	of lists.
	(tnt-send-text-as-chat-invitation): now using a while loop to keep
	prompting the user until expanding groups does not change the list.

2000-04-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-expand-groups-for-chat-invitation): oops.
	tnt-online-buddies-collection was not in the format i needed.  now